# synth-ai

./: ...  .bazelrc  .coverage  .cursorrules  .env.example  .env.test.dev  .env.test.prod  .gitattributes  .gitignore  .ty_diagnostics.txt  .ty_diagnostics_synth_ai_only.txt  AGENTS.md  BUILD.bazel  CHANGELOG.md  CLEANUP.md  Cargo.toml  DATACLASS_MIGRATION_PLAN.md  GEPA_MIGRATION_PLAN.md  ISSUE_FIXES_SUMMARY.md  MANIFEST.in  MODULE.bazel  Makefile  README.md  RELEASE.md  SDK_MULTI_STAGE_GEPA_COMPLETE.md  TEST_FIXES_SUMMARY.md  TUI-CREATE-JOB-TESTING.md  V2_TO_V3_MIGRATION_COMPLETE.md  V2_TO_V3_MIGRATION_STATUS.md  V3_FIXES_SUMMARY.md  __init__.py  analyze_verifier_payload.py  banking77_eval_auth.toml  banking77_eval_config.toml  banking77_eval_current.toml  banking77_eval_final.toml  banking77_eval_fixed.toml  banking77_eval_local.toml  banking77_eval_local_fixed.toml  banking77_eval_now.toml  (+144 more)
demos/rust_mipro/: Cargo.toml
demos/rust_mipro/src/: lib.rs  main.rs
demos/rust_mipro/tests/: gepa_banking77.rs
demos/web-design/: README.md  all_functional_descriptions.json  benchmark_models.py  capture_html_source.py  capture_screenshots.py  compare_pages.py  compare_samples.py  create_hf_dataset.py  discover_urls.py  discovered_urls.json  eval_demo.py  eval_job.py  failed_descriptions.json  generate_all_descriptions.py  generate_all_descriptions_parallel.py  generate_all_descriptions_rate_limited.py  generate_comparison_images.py  generate_functional_descriptions.py  generate_webpage.py  gepa_config.toml  manual_capture.py  parallel_capture.py  push_public_dataset.py  pyproject.toml  run_batch_verification.py  run_demo.py  sample_functional_descriptions.json  score_images.py  test_local_api.py  verify_generation.py  web_design_localapi.py  web_design_task_app.py
demos/web-design/data/astral/: manifest.json
demos/web-design/data/autumn/: manifest.json
demos/web-design/data/clerk/: manifest.json
demos/web-design/data/flyio/: manifest.json
demos/web-design/data/kernel/: manifest.json
demos/web-design/data/linear/: manifest.json
demos/web-design/data/mintlify/: manifest.json
demos/web-design/data/modal/: manifest.json
demos/web-design/data/neon/: manifest.json
demos/web-design/data/planetscale/: manifest.json
demos/web-design/data/posthog/: manifest.json
demos/web-design/data/railway/: manifest.json
demos/web-design/data/render/: manifest.json
demos/web-design/generated_pages/: autumn_homepage_20260106_225920.html
demos/web-design/optimization_results/: dataset_info.json
demos/web-design/verification_results/: astral_about_20260107_025234_20260107_122532_verification.json  astral_blog_20260107_014051_20260107_122547_verification.json  astral_blog_announcing-astral-the-company-behind-ruff_20260107_023450_20260107_122602_verification.json  astral_blog_astral-oss-fund-one-year-later_20260107_015658_20260107_122619_verification.json  astral_blog_astral-oss-fund_20260107_025229_20260107_122635_verification.json  astral_homepage_20260107_014036_verification.json  batch_results_20260107_122641.json
examples/polyglot/rust/: Cargo.toml  README.md
prompt-opt/: README.md  pyproject.toml
prompt-opt/examples/: dspy_gepa_slot_example.py  mipro_local_example.py
prompt-opt/rust/: Cargo.toml  README.md
prompt-opt/rust/rlm_v1/: Cargo.toml  README.md
prompt-opt/rust/src/: config.rs  dataset.rs  evaluator.rs  lib.rs  models.rs  optimizer.rs  sampler.rs
prompt-opt/rust_py/: Cargo.toml
prompt-opt/rust_py/src/: lib.rs
prompt-opt/src/gepa/: __init__.py
prompt-opt/src/prompt_opt/: __init__.py  gepa_ai_compat.py  mipro.py
synth_ai_core/: Cargo.toml  README.md
synth_ai_core/assets/: data_enum_values.json  event_base_schemas.json  event_enum_values.json  lever_sensor_v1_schema.json
synth_ai_core/src/: auth.rs  config.rs  environment_pools.rs  errors.rs  events.rs  graph_evolve.rs  http.rs  jobs.rs  jobs_endpoints.rs  lib.rs  mipro.rs  models.rs  plan_gating.rs  polling.rs  shared_client.rs  sse.rs  trace_upload.rs  urls.rs  utils.rs  verifier.rs  x402.rs
synth_ai_core/src/api/: client.rs  container.rs  eval.rs  graph_evolve.rs  graphs.rs  inference.rs  jobs.rs  localapi.rs  mod.rs  routes.rs  types.rs
synth_ai_core/src/container/: auth.rs  client.rs  health.rs  helpers.rs  llm_guards.rs  mod.rs  proxy.rs  rollout_helpers.rs  trace_helpers.rs  tracing_utils.rs  types.rs  validation.rs  validators.rs  vendors.rs
synth_ai_core/src/data/: artifacts.rs  context_override.rs  contracts.rs  enum_values.rs  enums.rs  judgements.rs  levers.rs  mod.rs  objectives.rs  rewards.rs  rubrics.rs  sensors.rs
synth_ai_core/src/localapi/: auth.rs  client.rs  datasets.rs  health.rs  helpers.rs  llm_guards.rs  mod.rs  override_helpers.rs  proxy.rs  rollout_helpers.rs  trace_helpers.rs  tracing_utils.rs  types.rs  validators.rs  vendors.rs
synth_ai_core/src/orchestration/: base_events.rs  builders.rs  event_extraction.rs  event_schemas.rs  event_types.rs  events.rs  graph_convert.rs  graph_evolve.rs  graph_validation.rs  job_events.rs  mod.rs  progress.rs  prompt_learning.rs  schemas.rs  streaming.rs  validation.rs
synth_ai_core/src/streaming/: config.rs  endpoints.rs  handler.rs  mod.rs  streamer.rs  types.rs
synth_ai_core/src/tracing/: error.rs  hooks.rs  libsql_storage.rs  mod.rs  models.rs  storage.rs  tracer.rs  utils.rs
synth_ai_core/src/tunnels/: cloudflared.rs  connector.rs  errors.rs  gateway.rs  lease_client.rs  manager.rs  mod.rs  ports.rs  synth_tunnel.rs  synthtunnel_client.rs  types.rs
synth_ai_core_types/: Cargo.toml
synth_ai_core_types/src/: lib.rs
synth_ai_py/: Cargo.toml  __init__.py
synth_ai_py/src/: lib.rs
synth_ai_rs/: Cargo.toml  README.md
synth_ai_rs/examples/: container_list.rs  localapi_list.rs
synth_ai_rs/src/: client.rs  container.rs  containers_api.rs  environment_pools.rs  eval.rs  graphs_api.rs  inference_api.rs  lib.rs  localapi.rs  models.rs  openapi_paths.rs  optimization.rs  optimization_api.rs  pools_api.rs  sse.rs  transport.rs  tunnels_api.rs  types.rs  verifiers_api.rs
synth_ai_rs/src/core/: http.rs  mod.rs  sse.rs
(+5333 files in other folders)
