load("@rules_shell//shell:sh_test.bzl", "sh_test")

COMMON_ENV = {
    "PATH": "/opt/homebrew/bin:/usr/local/bin:/usr/bin:/bin",
}

PYTEST_DATA = glob([
    "synth_ai/**",
    "tests/**",
    "pyproject.toml",
    "uv.lock",
])

sh_test(
    name = "pytest_fast",
    srcs = ["bazel/pytest_fast.sh"],
    data = PYTEST_DATA,
    local = True,
    env = COMMON_ENV,
    tags = ["local"],
    timeout = "long",
)

sh_test(
    name = "pytest_unit",
    srcs = ["bazel/pytest_unit.sh"],
    data = PYTEST_DATA,
    local = True,
    env = COMMON_ENV,
    tags = ["unit", "local"],
    timeout = "long",
)
