[project]
name = "synth-ai"
version = "0.8.2"
description = "Serverless Posttraining for Agents - Core AI functionality and tracing"
authors = [{name = "Synth AI", email = "josh@usesynth.ai"}]
license = { text = "MIT" }
license-files = ["synth_ai_py/LICENSE"]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core dependencies
    "pydantic>=2.0.0",
    "requests>=2.32.3",
    "pynacl>=1.5.0",
    "tqdm>=4.66.4",
    "typing_extensions>=4.0.0",
    # AI/LLM providers (only OpenAI required - others are optional via [providers])
    "rich>=13.9.0",
    "openai>=1.99.0",
    # Environment framework - basic dependencies
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
    "numpy>=2.2.3",
    "sqlalchemy>=2.0.42",
    "click>=8.1.7,<8.2", # For CLI (pin to signature compatible with Typer)
    "aiohttp>=3.8.0", # For async HTTP requests
    "nest_asyncio>=1.6.0", # For nested event loops in sync callbacks
    "httpx>=0.28.1", # CLI preflights and HTTP clients (pulls httpcore)
    # Dataset loading - used by container dataset helpers
    "datasets>=4.0.0",
    "jsonschema>=4.23.0",
    # Crafter container deps (ContinualLearningBench crafter engine)
    "Pillow>=10.0.0",
    "imageio>=2.34.0",
]

[project.scripts]
synth-ai = "synth_ai.cli:cli"
synth-ai-mcp-managed-research = "synth_ai.mcp.managed_research_server:main"

[project.optional-dependencies]
schemas = []
providers = [
    # Optional LLM providers (lazy-loaded when used)
    "anthropic>=0.42.0",
    "groq>=0.30.0",
    "google-genai>=1.26.0",
]
dev = [
    "build>=1.2.2.post1",
    "twine>=4.0.0",
    "keyring>=24.0.0",
    "pytest>=8.3.3",
    "pytest-xdist>=3.6.1",
    "pytest-timeout>=2.3.1",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=4.1.0",
    "pyright>=1.1.350",
    "coverage[toml]>=7.3.0",
    "ruff>=0.1.0",
    "papermill>=2.6.0",
    "nest_asyncio>=1.6.0",
]
all = [
    # Include providers
    "anthropic>=0.42.0",
    "groq>=0.30.0",
    "google-genai>=1.26.0",
]
analytics = [
    "pandas>=2.2.3",
]

[project.urls]
Homepage = "https://github.com/synth-laboratories/synth-ai"
Repository = "https://github.com/synth-laboratories/synth-ai"
Issues = "https://github.com/synth-laboratories/synth-ai/issues"

[build-system]
requires = ["maturin>=1.6"]
build-backend = "maturin"

[tool.maturin]
module-name = "synth_ai_py"
python-source = "."
python-packages = ["synth_ai"]
bindings = "pyo3"
manifest-path = "synth_ai_py/Cargo.toml"
sdist-include = [
    "Cargo.toml",
    "Cargo.lock",
    "LICENSE",
    "synth_ai_py/**",
    "synth_ai_core/**",
    "synth_ai_core_types/**",
    "synth_ai_rs/**",
]

[tool.setuptools.packages.find]
include = ["synth_ai*"]
exclude = [
    "docs*",
    "tests*",
    "scripts*",
    "private_tests*",
    # Exclude heavy demo/test subpackages from distribution
    "synth_ai.*agent_demos*",
    "synth_ai.*old*",
    "synth_ai.*tests*",
    "synth_ai.*units*",
    "synth_ai.tracing_v3.tests*",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.exclude-package-data]
"synth_ai" = [
    # Exclude heavy data inside agent_demos/old/tests
    "**/agent_demos/**",
    "**/old/**",
    "**/tests/**",
    "**/units/**",
]

[tool.setuptools.package-data]
"synth_ai" = [
    "config/supported_models.json",
]

[tool.pytest.ini_options]
testpaths = ["tests", "private_tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
markers = [
    "fast: marks tests as fast (≤5 seconds) - these are the default tests to run",
    "slow: marks tests as slow (>5 seconds) - requires more time/resources",
    "integration: marks tests as integration tests requiring external services",
    "unit: marks tests as isolated unit tests",
    "public: marks tests that can run in any environment",
    "private: marks tests that may require credentials or special setup",
]
# Add timeout for long-running tests
timeout = 300
# Show test durations (slowest N tests)
addopts = "--durations=10"

[tool.coverage.run]
source = ["synth_ai"]
omit = ["*/tests/*", "*/test_*"]
data_file = "coverage/.coverage"

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.pyright]
include = ["synth_ai", "tests"]
exclude = ["**/__pycache__"]
pythonVersion = "3.11"
typeCheckingMode = "standard"
reportMissingImports = true
reportMissingTypeStubs = false

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["synth_ai"]
extend-exclude = [
    ".venv",
    ".tmp",
    "**/*.ipynb",
    "demos",
    "dev",
    "docs",
    "scripts",
    "tests",
    "private_tests",
    "old",
    "tauri",
    "temp",
    "traces",
    "traces_*",
    "synth_ai.db",
    "synth_ai/tracing_v3/tests",
]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "YTT", "B", "C4", "T10", "SIM"]
ignore = [
    "E501",  # Line too long
    "B008",  # Do not perform function call in argument defaults
    "UP035", # Don't require `from __future__ import annotations` (not needed in 3.11+)
    "UP006", # Allow typing.Tuple
    "UP045", # Allow Optional[...] annotations
]

[tool.ruff.lint.per-file-ignores]
"synth_ai/http.py" = ["F403"]
"**/__init__.py" = ["N999"]
"**/__main__.py" = ["N999"]

[tool.ty]
# Suppress conservative warnings about possibly-missing-attribute
# These are false positives for dict.get() calls and dynamic attributes
rules = { "possibly-missing-attribute" = "ignore" }

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-xdist>=3.6.1",
    "pytest-timeout>=2.3.1",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "pyright>=1.1.350",
    "responses>=0.25.7",
    "httpx>=0.28.1",
    "papermill>=2.6.0",
    "nest_asyncio>=1.6.0",
    "nbstripout>=0.8.2",
    "ipykernel>=7.1.0",
]
