[project]
name = "synth-ai"
version = "0.10.0"
description = "Python-only SDK for Synth containers, tunnels, and container pools"
authors = [{name = "Synth AI", email = "josh@usesynth.ai"}]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Live SDK runtime
    "pydantic>=2.0.0",
    "pynacl>=1.5.0",
    "click>=8.1.7,<8.2",
    "httpx>=0.28.1",
]

[project.scripts]
synth-ai = "synth_ai.cli:cli"

[project.optional-dependencies]
schemas = []
providers = [
    # Optional LLM providers (lazy-loaded when used)
    "anthropic>=0.42.0",
    "groq>=0.30.0",
    "google-genai>=1.26.0",
]
dev = [
    "build>=1.2.2.post1",
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
    "twine>=4.0.0",
    "keyring>=24.0.0",
    "pytest>=8.3.3",
    "pytest-xdist>=3.6.1",
    "pytest-timeout>=2.3.1",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=4.1.0",
    "coverage[toml]>=7.3.0",
    "ruff>=0.1.0",
    "papermill>=2.6.0",
    "nest_asyncio>=1.6.0",
]
all = [
    # Include providers
    "anthropic>=0.42.0",
    "groq>=0.30.0",
    "google-genai>=1.26.0",
]
analytics = [
    "pandas>=2.2.3",
]

[project.urls]
Homepage = "https://github.com/synth-laboratories/synth-ai"
Repository = "https://github.com/synth-laboratories/synth-ai"
Issues = "https://github.com/synth-laboratories/synth-ai/issues"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["synth_ai", "synth_ai.*"]
exclude = [
    "docs*",
    "tests*",
    "scripts*",
    "private_tests*",
    "synth_ai.*tests*",
    "synth_ai.*units*",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.exclude-package-data]
"synth_ai" = [
    # Exclude heavy data inside agent_demos/old/tests
    "**/agent_demos/**",
    "**/tests/**",
    "**/units/**",
]

[tool.setuptools.package-data]
"synth_ai" = [
    "opencode/skill/*/SKILL.md",
]

[tool.pytest.ini_options]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
markers = [
    "fast: marks tests as fast (≤5 seconds) - these are the default tests to run",
    "slow: marks tests as slow (>5 seconds) - requires more time/resources",
    "integration: marks tests as integration tests requiring external services",
    "unit: marks tests as isolated unit tests",
    "public: marks tests that can run in any environment",
    "private: marks tests that may require credentials or special setup",
]
# Add timeout for long-running tests
timeout = 300
# Show test durations (slowest N tests)
addopts = "--durations=10"

[tool.coverage.run]
source = ["synth_ai"]
omit = ["*/tests/*", "*/test_*"]
data_file = "coverage/.coverage"

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.ruff]
# Lint/format: package `synth_ai/`. Type-check: `ty` scoped to the same tree — [tool.ty.src].
line-length = 100
target-version = "py311"
src = ["synth_ai"]
extend-exclude = [
    ".venv",
    ".tmp",
    "**/*.ipynb",
    "demos",
    "dev",
    "docs",
    "scripts",
    "tests",
    "private_tests",
    "old",
    "tauri",
    "temp",
    "traces",
    "traces_*",
    "synth_ai.db",
]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "YTT", "B", "C4", "T10", "SIM"]
ignore = [
    "E501",  # Line too long
    "B008",  # Do not perform function call in argument defaults
    "UP035", # Don't require `from __future__ import annotations` (not needed in 3.11+)
    "UP006", # Allow typing.Tuple
    "UP045", # Allow Optional[...] annotations
]

[tool.ruff.lint.per-file-ignores]
"synth_ai/http.py" = ["F403"]
"**/__init__.py" = ["N999"]
"**/__main__.py" = ["N999"]

[tool.ty.src]
include = ["synth_ai"]

[tool.ty.rules]
possibly-missing-attribute = "ignore"

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
    "twine>=4.0.0",
    "keyring>=24.0.0",
    "pytest>=8.3.3",
    "pytest-xdist>=3.6.1",
    "pytest-timeout>=2.3.1",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "ty>=0.0.1a5",
    "responses>=0.25.7",
    "httpx>=0.28.1",
    "papermill>=2.6.0",
    "nest_asyncio>=1.6.0",
    "nbstripout>=0.8.2",
    "ipykernel>=7.1.0",
]
