[metadata]
name = synth-ai
version = 0.1.0.dev16
description = Software for aiding the best and multiplying the will.
long_description = file: README.md
long_description_content_type = text/markdown
author = Josh Purtell
author_email = josh@usesynth.ai
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.10 