[package]
name = "synth-ai-core"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Rust core for Synth AI SDKs - API client, streaming, tracing, and tunnels"
repository = "https://github.com/synth-laboratories/synth-ai"
homepage = "https://usesynth.ai"
documentation = "https://docs.rs/synth-ai-core"
readme = "README.md"
keywords = ["ai", "llm", "prompt-optimization", "machine-learning"]
categories = ["api-bindings", "asynchronous"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.37", features = ["rt", "macros", "time", "process", "fs", "sync"] }
url = "2.5"
serde_urlencoded = "0.7"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.19"
parking_lot = "0.12"
uuid = { version = "1.10", features = ["v4"] }
base64 = "0.22"
sodiumoxide = "0.2"
dirs = "5.0"
toml = "0.8"
trust-dns-resolver = { version = "0.23", default-features = false, features = ["tokio-runtime"] }
hyper = { version = "1.3", features = ["http1", "client", "server"] }
http-body-util = "0.1"
bytes = "1.6"
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["io", "rt"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
flate2 = "1.0"
tar = "0.4"
which = "6.0"
hyper-util = { version = "0.1", features = ["tokio"] }
eventsource-stream = "0.2"

tempfile = "3"
open = "5"

# Tracing system
libsql = "0.6"
async-trait = "0.1"

synth_ai_core_types = { path = "../synth_ai_core_types", version = "0.2.0" }
