[package]
name = "synth_ai_core_types"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Shared type definitions for Synth AI SDKs"
repository = "https://github.com/synth-laboratories/synth-ai"
homepage = "https://usesynth.ai"
keywords = ["ai", "llm", "types"]
categories = ["api-bindings"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
