[package]
name = "synth_ai_py"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "PyO3 bindings for Synth AI core (internal)"
publish = false

[lib]
name = "synth_ai_py"
crate-type = ["cdylib"]

[dependencies]
once_cell = "1.19"
pyo3 = { version = "0.22", features = ["extension-module"] }
pythonize = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["rt", "rt-multi-thread"] }
uuid = { version = "1.10", features = ["v4"] }
reqwest = { version = "0.12", default-features = false }
futures-util = "0.3"
base64 = "0.22"

synth-ai-core = { path = "../synth_ai_core" }
synth_ai_core_types = { path = "../synth_ai_core_types" }
