[package]
name = "synth-ai"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Rust SDK for Synth AI - serverless post-training APIs"
repository = "https://github.com/synth-laboratories/synth-ai/tree/main/synth_ai_rs"
homepage = "https://usesynth.ai"
documentation = "https://docs.rs/synth-ai"
readme = "README.md"
keywords = ["ai", "llm", "prompt-optimization", "machine-learning", "sdk"]
categories = ["api-bindings", "asynchronous"]

[dependencies]
axum = "0.8.8"
eventsource-stream = "0.2.3"
futures-util = "0.3.31"
reqwest = { version = "0.13.1", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "macros"] }
toml = "0.9.11"
