[project]
name = "web-design-demo"
version = "0.1.0"
description = "Web design screenshot capture and training demo"
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.40.0",
    "google-genai>=1.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
