[package]
name = "prompt_opt_py"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "PyO3 bindings for prompt-opt Rust core"
publish = false

[lib]
name = "prompt_opt_rust"
crate-type = ["cdylib"]

[dependencies]
async-trait = "0.1"
once_cell = "1.19"
pyo3 = { version = "0.22", features = ["extension-module"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["rt", "rt-multi-thread"] }

prompt-opt = { path = "../rust" }

[workspace]
