[package]
name = "synth-task-app"
version = "0.1.0"
edition = "2021"
description = "Example Task App for Synth prompt optimization (Rust)"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client for LLM calls
reqwest = { version = "0.12", features = ["json"] }

# Utilities
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
