[package]
name = "rlm-rs"
version = "0.1.3"
edition = "2024"
rust-version = "1.85"
description = "Reward Language Model (RLM) verifier: weighted signals, grading, and reports"
license-file = "LICENSE.md"
readme = "README.md"
repository = "https://github.com/synth-laboratories/Horizons"
keywords = ["llm", "reward", "evaluation", "grading", "verifier"]
include = ["src/**", "Cargo.toml", "README.md", "LICENSE.md"]

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
ulid = { version = "1", features = ["serde"] }
